| Bug #56936 | valgrind warnings, TABLE_REF objects are not properly initialized | ||
|---|---|---|---|
| Submitted: | 22 Sep 2010 15:02 | Modified: | 22 Nov 2010 1:18 |
| Reporter: | Tor Didriksen | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Optimizer | Severity: | S3 (Non-critical) |
| Version: | next-mr-opt-backporting, 5.6.99 | OS: | Any |
| Assigned to: | Tor Didriksen | CPU Architecture: | Any |
[22 Sep 2010 15:02]
Tor Didriksen
[23 Sep 2010 6:40]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/118881 3250 Tor Didriksen 2010-09-23 Bug #56936 valgrind warnings, TABLE_REF objects are not properly initialized Use placement new, and constructor, rather than thd->alloc() and ad-hoc initialization. @ sql/sql_select.cc Use placement new. Fix some missing DBUG_RETURN(TRUE) @ sql/sql_select.h st_table_ref: inherit from Sql_alloc, so we can do placement new. Add constructor.
[23 Sep 2010 12:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/118936 3250 Tor Didriksen 2010-09-23 Bug #56936 valgrind warnings, TABLE_REF objects are not properly initialized Use placement new, and constructor, rather than thd->alloc() and ad-hoc initialization. @ sql/sql_select.cc Use placement new. Fix some missing DBUG_RETURN(TRUE) @ sql/sql_select.h st_table_ref: inherit from Sql_alloc, so we can do placement new. Add constructor.
[24 Sep 2010 7:23]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/118993 3251 Tor Didriksen 2010-09-23 Bug #56936 valgrind warnings, TABLE_REF objects are not properly initialized Use placement new, and constructor, rather than thd->alloc() and ad-hoc initialization. @ sql/sql_select.cc Use placement new. Fix some missing DBUG_RETURN(TRUE) @ sql/sql_select.h st_table_ref: inherit from Sql_alloc, so we can do placement new. Add constructor.
[24 Sep 2010 7:55]
Tor Didriksen
Pushed to next-mr-opt-backporting
[13 Nov 2010 16:23]
Bugs System
Pushed into mysql-trunk 5.6.99-m5 (revid:alexander.nozdrin@oracle.com-20101113155825-czmva9kg4n31anmu) (version source revid:vasil.dimov@oracle.com-20100629074804-359l9m9gniauxr94) (merge vers: 5.6.99-m4) (pib:21)
[13 Nov 2010 16:32]
Bugs System
Pushed into mysql-next-mr (revid:alexander.nozdrin@oracle.com-20101113160336-atmtmfb3mzm4pz4i) (version source revid:jimmy.yang@oracle.com-20100804103744-vbpeghipkz6pyc9z) (pib:21)
[22 Nov 2010 1:18]
Paul DuBois
Bug is not in any released 5.6.x version. No changelog entry needed.
