Bug #56936 valgrind warnings, TABLE_REF objects are not properly initialized

Use placement new, and constructor, rather than thd->alloc() and ad-hoc initialization.